user가 있을 시 시나리오 완성되면 user_id를 함께 세션에 저장

--- a/tests/index.html
+++ b/tests/index.html
@@ -63,7 +63,7 @@
       <p>Connect to the Scenario WS endpoint and stream audio/text.</p>
 
       <label for="wsUrl">WebSocket URL</label>
-      <input id="wsUrl" type="text" value="ws://127.0.0.1:8000/api/v1/ws/scenario" />
+      <input id="wsUrl" type="text" value="ws://127.0.0.1:8000/api/v1/ws/guest-scenario" />
       <button id="connectBtn">Connect</button>
       <div class="status" id="wsStatus">WS: Disconnected</div>
 
